<resources>
    <string name="API_KEY">AIzaSyArbfwfdM1HQxITlLlSM_1agQoePgxwXoA</string>
    <string name="app_name">Student Health Monitoring</string>
    <string name="need_a_new_account_cap">NEED NEW ACCOUNT</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_cap">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="already_have_account_cap">ALREADY HAVE ACCOUNT</string>
    <string name="welcome_to_chat_app">Welcome to health Monitoring</string>
    <string name="login_cap">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_new_here">"Hi there, I\'m new here"</string>
    <string name="change_image_cap">EDIT IMAGE</string>
    <string name="change_name_cap">EDIT NAME</string>
    <string name="change_status_cap">EDIT STATUS</string>
    <string name="change_physical_characteristics_cap">EDIT PHYSICAL STATS</string>
    <string name="logging_in">Logging In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="please_wait_while_we_check_your_credentials">Please wait while we check your credentials !</string>
    <string name="cannot_sign_in">Cannot Sign in. Please check the form and try again.</string>
    <string name="registering_user">Registering User</string>
    <string name="please_wait_while_we_create_your_account">Please wait while we create your account !</string>
    <string name="change_your_name">Change your Name</string>
    <string name="change_your_GPS_name">Change your GPS track name</string>
    <string name="change_your_Heart_Rate_name">Change your heart rate test name</string>
    <string name="change_your_status">Change your Status</string>
    <string name="change_your_gender">Change your Gender</string>
    <string name="change_your_birth_date">Change your Birth Date</string>
    <string name="change_your_height">Change your Height</string>
    <string name="change_your_weight">Change your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="your_GPS_name">Your GPS track name</string>
    <string name="your_Heart_Rate_name">Your heart rate test name</string>
    <string name="your_status">Your Status</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_birth_date">Your Birth Date [MM/dd/yyyy]</string>
    <string name="your_height">Your Height [cm]</string>
    <string name="your_weight">Your Weight [kg]</string>
    <string name="save_changes_cap">SAVE CHANGES</string>
    <string name="saving_changes">Saving changes</string>
    <string name="please_wait_while_we_save_the_changes">Please wait while we save the changes !</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="please_wait_while_we_upload_and_process_the_image">Please wait while we upload and process the image</string>
    <string name="status">Status</string>
    <string name="loading_user_profile">Loading User Profile</string>
    <string name="please_wait_while_we_load_the_user_data">" Please wait while we load the user data !"</string>
    <string name="total_friends">Total Friends:\u0020</string>
    <string name="unfriend_this_person_cap">UNFRIEND THIS PERSON</string>
    <string name="friend_this_person_cap">FRIEND THIS PERSON</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="instruction_0">0 - Prepare watch</string>
    <string name="instruction_1">1 - Lay down</string>
    <string name="instruction_2">2 - Stand up</string>
    <string name="instruction_3">3 - Test finished</string>
    <string name="default_birthday">01/01/1991</string>
    <string name="default_weight">70 kg</string>
    <string name="default_height">170 cm</string>
    <string name="friends_since">Friends since:\u0020</string>
    <string name="default_date">06/23/16</string>
    <string name="gps_cap">GPS</string>
    <string name="date">\u0020\u0020Date:\u0020</string>
    <string name="name">Name:\u0020</string>
    <string name="start_time">\u0020\u0020Start time:\u0020</string>
    <string name="end_time">End time:\u0020</string>
    <string name="total_time">\u0020\u0020Total time:\u0020</string>
    <string name="total_distance">Total distance:\u0020</string>
    <string name="ave_speed">\u0020\u0020Ave. speed:\u0020</string>
    <string name="max_speed">Max speed:\u0020</string>
    <string name="heart_rate_cap">Heart Rate</string>
    <string name="hr_rest">\u0020\u0020HR rest:\u0020</string>
    <string name="hr_stand">HR stand:\u0020</string>
    <string name="hr_diff">\u0020\u0020HR diff:\u0020</string>
    <string name="hr_max">HR max:\u0020</string>
    <string name="space">\u0020\u0020</string>
    <string name="title_heart_rate">\u0020\u0020Launch a new heart rate orthostatic test:</string>
    <string name="title_gps">\u0020\u0020Last GPS track:</string>
    <string name="section_gps">GPS</string>
    <string name="section_heart_rate">HEART RATE</string>
    <string name="section_friends">FRIENDS</string>
    <string name="sdf_yyyyMMddTHHmmssZ">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="sdf_MMddyyyy">MM/dd/yyyy</string>
    <string name="sdf_hhmmss">HH:mm:ss</string>
    <string name="sdf_mmss">mm:ss</string>
    <string name="axisTime">Time [hh:mm:ss]</string>
    <string name="axisElevation">Elevation [m]</string>
    <string name="axisHeartRate">Heart Rate [bpm]</string>
    <string name="noDataGPS">GPS data unavailable</string>
    <string name="noDataHeartRate">Heart Rate data unavailable</string>
    <string name="noDataGPS_cap">GPS: no data</string>
    <string name="noDataHeartRate_cap">Heart Rate: no data</string>
    <string name="zone_0">Light intensity</string>
    <string name="zone_1">Moderate intensity</string>
    <string name="zone_2">Intense</string>
    <string name="zone_3">Very intense</string>
    <string name="zone_4">All out intensity</string>
    <string name="gps_file_not_found">GPS file not found</string>
    <string name="heart_rate_file_not_found">Heart Rate file not found</string>
    <string name="a_problem_occurred">A problem occurred</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="file_not_uploaded">File not uploaded</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="image_not_uploaded">Image not uploaded</string>
    <string name="error_in_saving_changes">There was some error in saving changes</string>
    <string name="toolbar_gps_name">Change GPS Name Track</string>
    <string name="toolbar_heart_rate_name">Change Heart Rate Test Name</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_main">Health Monitoring</string>
    <string name="toolbar_name">Name</string>
    <string name="toolbar_physical_characteristics">Physical Characteristics</string>
    <string name="toolbar_register">Create New Account</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_status">Status</string>
    <string name="toolbar_sync">Sychronization</string>
    <string name="toolbar_survey">Survey</string>
    <string name="toolbar_users">Users</string>
    <string name="toolbar_user_profil">User Profil</string>
    <string name="gender">Your Gender</string>
    <string name="description_pbdrug">Do you consum drugs?</string>
    <string name="pbdrug_no">No</string>
    <string name="pbdrug_yes">Yes</string>
    <string name="description_pbdiabetes">Do you take medicins for diabetes </string>
    <string name="pbdiabetes_no">No</string>
    <string name="pbdiabetes_yes">Yes</string>
    <string name="description_pbcardiaque">Did you have any heart issue in the past?</string>
    <string name="proposition_pbcardiaque">Description</string>
    <string name="description_pbalcohol">Do you often drink alcohol?</string>
    <string name="proposition_pbalcohol">Description</string>
    <string name="description_pbsleep">Do you have sleep troubles?</string>
    <string name="proposition_pbsleep">Description </string>
    <string name="description_pbexercise">How did you find this exercise?</string>
    <string name="proposition_pbexercise">Description </string>
</resources>