<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.fmottier.studenthealthmonitoring.StatusActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarSurvey"
            layout="@layout/app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_your_gender"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarSurvey" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblGender">

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGender"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblBirthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_your_birth_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGender" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBirthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblBirthDate">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_birth_date"
                android:inputType="date"
                android:textSize="@dimen/text_size_medium" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_your_height"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBirthDate" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHeight" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_height"
                android:inputType="number"
                android:textSize="@dimen/text_size_medium" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_your_weight"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblWeight">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_weight"
                android:inputType="number"
                android:textSize="@dimen/text_size_medium" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnPhysicalCharacteristicsSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save_changes_cap"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWeight" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>